fixed up footer spacing on mobile

--- a/pages/main.module.sass
+++ b/pages/main.module.sass
@@ -22,18 +22,27 @@
     & img
         margin-left: 0.5rem
 
-    & a, span
-        padding-top: 1rem
-        display: flex
-        font-size: calc( 1rem - 2px)
-        justify-content: center
-        align-items: center
-        text-decoration: none
-        color: inherit
 
 
 .links 
   display: flex
   flex-direction: row
   justify-content: center
+  gap: 3px
+
+  & a, span
+    padding-top: 1rem
+    display: flex
+    font-size: calc( 1rem - 2px)
+    justify-content: center
+    align-items: center
+    text-decoration: none
+    color: inherit
+
+.bottom 
+  display: flex
+  font-size: calc( 1rem - 2px)
+  justify-content: space-between
+  align-items: center
+  color: inherit
   gap: 3px
